registro-atividades-k8s/k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registro-atividades-api
  namespace: registro-atividades
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registro-atividades-api
  template:
    metadata:
      labels:
        app: registro-atividades-api
    spec:
      containers:
        - name: api
          image: luissf/registro-atividades:latest
          ports:
            - containerPort: 8001
